[package]
name = "bmw"
version = "0.0.2-beta1"
authors = ["BMW Develoeprs"]
description = "Bitcoin Mimblewimble (BMW) core libraries"
license = "Apache-2.0"
repository = "https://github.com/37miners/bmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = [
	"error", "deps"
]
exclude = ["etc"]

[dependencies]

bmw_deps  = { path = "./deps"  }
bmw_err   = { path = "./error" }
bmw_log   = { path = "./log"   }
bmw_crypt = { path = "./crypt" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"]}

