[package]
name = "bmw_crypt"
version = "0.0.1-beta1"
authors = ["BMW Develoeprs"]
description = "Crypt library"
license = "Apache-2.0"
repository = "https://github.com/37miners/bmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2018"

[dependencies]

bmw_deps = { path = "../deps"  }
bmw_err  = { path = "../error" }

