[package]
name = "bmw_err"
version = "0.0.3-beta.1"
authors = ["BMW Develoeprs"]
description = "Error library"
license = "Apache-2.0"
repository = "https://github.com/37miners/bmw"
keywords = [ "crypto", "bitcoinmw"]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
edition = "2021"

[dependencies]

bmw_deps = { path = "../deps" }

